src/objects/Case_Document__c.object
<CustomObject>
    <customHelpPage>Help_Case_Document_VF</customHelpPage>
    <description>Some are restricted, some are collaborative: this object represents all the shared documents on an individual file (assessments, consents ... )</description>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Documents</relationshipLabel>
        <relationshipName>Case_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encrypted>true</encrypted>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document_Key_Words__c</fullName>
        <encrypted>true</encrypted>
        <label>Document Keywords</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Protocols_and_Safeguards__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Protocols and Safeguards</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Protocols_and_Safeguards__c.Case__c</field>
                <operation>equals</operation>
                <valueField>$Source.Case__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Protocols_and_Safeguards__c</referenceTo>
        <relationshipLabel>Case Documents</relationshipLabel>
        <relationshipName>Case_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral</label>
        <referenceTo>Referral__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Case_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>Consent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correspondence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health / Safety Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Protocol / Safeguard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IFSN - Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IFSN - Picture Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education - IEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service / Support Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Plans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crisis / Contingency Plans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diagnosis Proof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behavioural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive Behavioural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychological / Psychiatric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Case Document</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encrypted>true</encrypted>
        <label>Case Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Documents</pluralLabel>
    <recordTypes>
        <fullName>Collaborative</fullName>
        <active>true</active>
        <description>Collaborative Case Documents will be shared with all support team members for this individual&apos;s case. Collaborative documents should be relevant to assist others in picture and planning activities.</description>
        <label>Collaborative</label>
    </recordTypes>
    <recordTypes>
        <fullName>Restricted</fullName>
        <active>true</active>
        <description>Restricted Case Documents will only be shared with the Navigator and the user who added the document. Any documents containing sensitive information should be uploaded as Restricted.</description>
        <label>Restricted</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>External_users_cant_modify_documents</fullName>
        <active>true</active>
        <description>This record cannot be edited.</description>
        <errorConditionFormula>AND(NOT(ISPICKVAL($Profile.UserType, &quot;Standard&quot;)), OR( ISCHANGED ( Category__c ), ISCHANGED( Sub_Category__c), ISCHANGED( Name ),ISCHANGED ( Case__c ), ISCHANGED(Description__c)))</errorConditionFormula>
        <errorMessage>Only the record creator or a System Administrator can edit this record.</errorMessage>
    </validationRules>
</CustomObject>